[package]
name = "constituency_tree_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust parser created to parse constituency tree"
authors = ["Dzhos Oleksii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"
