[package]
name = "constituency_tree_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust parser created to parse constituency tree"
authors = ["Bohdan Tsehelnyk"]
homepage = "https://github.com/Qewby/constituency_tree_parser"

[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"
