[package]
name = "constituency_tree_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust parser created to parse constituency tree into tree structure"
authors = ["Bohdan Tsehelnyk"]
homepage = "https://github.com/Qewby/constituency_tree_parser"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"
